clang/test/BSC/Negative/OwnedStruct/tag-name/generic-struct-tag-name.cbs
// RUN: %clang_cc1 -verify %s

owned struct D<T> {

};

owned struct D<int> b; // expected-error {{must ignore 'owned struct' tag before struct name}}
                       // expected-error@-1 {{type of global variable cannot qualified by 'owned'}}
int owned struct D<T>::f() { // expected-error {{must ignore 'owned struct' tag before struct name}}
    return 0;
}
struct F<T>; 
owned struct F<T> {}; // expected-error {{inconsistent tag before struct name}}
int main() {
    owned struct D<float> c; // expected-error {{must ignore 'owned struct' tag before struct name}}
    return 0;
}